Switch to Spring MVC virtual threading