@@ -6,6 +6,7 @@ plugins {
 
     id 'idea'
     id 'java'
+    id 'application'
 }
 
 enum Category { GRPC, JUNIT, KOTLIN, LIBRARY, SPRING_BOOT }
@@ -39,15 +40,24 @@ subprojects {
         def usingSpringBoot = isCategory(Category.SPRING_BOOT)
         def usingKotlin = isCategory(Category.KOTLIN)
         def usingJunit = isCategory(Category.JUNIT)
+        def ENABLE_PREVIEW = "--enable-preview"
+        def ADD_MODULES = "--add-modules"
+        def JDK_INCUBATOR_CONCURRENT = "jdk.incubator.concurrent"
 
         sourceCompatibility = parent.properties.javaVersion
 
         compileJava {
             options.release = Integer.parseInt(parent.properties.javaVersion)
+            options.compilerArgs << ENABLE_PREVIEW
+            options.compilerArgs << ADD_MODULES
+            options.compilerArgs << JDK_INCUBATOR_CONCURRENT
         }
 
         if(isLibrary) {
             apply plugin: 'java-library'
+        } else {
+            apply plugin: 'application'
+            applicationDefaultJvmArgs = [ENABLE_PREVIEW, ADD_MODULES, JDK_INCUBATOR_CONCURRENT]
         }
 
         if (usingKotlin) {
@@ -65,8 +75,11 @@ subprojects {
             mavenCentral()
         }
 
-        if (usingJunit) {
-            test {
+        test {
+            jvmArgs += ENABLE_PREVIEW
+            jvmArgs += ADD_MODULES
+            jvmArgs += JDK_INCUBATOR_CONCURRENT
+            if (usingJunit) {
                 useJUnitPlatform()
             }
         }
